--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           </div>
             <h1 class="header_title">New Single</h1>
             <p class="header_text">War For Love</p>
-            <video class='header_video' autoplay muted loop id="myVideo">
+            <video class='header_video' autoplay muted loop disablePictureInPicture controlsList="nodownload" id="myVideo">
                 <source src="video/Bright Lights - Heartless - SD 480p.mov" type="video/mp4">
             </video>
         </header>
@@ -197,12 +197,12 @@
                 </div>
             </div>
             <div class="footer_links">
-                <a href="https://www.apple.com/itunes/"><img src="img/footer_apple-logo.png" alt=""></a>
-                <a href="https://www.spotify.com"><img src="img/footer_spotify-logo.png" alt=""></a>
-                <a href="https://www.instagram.com/"><img src="img/footer_instagram-logo.png" alt=""></a>
-                <a href="https://www.youtube.com/"><img src="img/footer_youtube-logo.png" alt=""></a>
-                <a href="https://www.twitter.com/"><img src="img/footer_twitter-logo.png" alt=""></a>
-                <a href="https://www.facebook.com/"><img src="img/footer_facebook-logo.png" alt=""></a>
+                <a class="links_logo" href="https://www.apple.com/itunes/"><img src="img/footer_apple-logo.png" alt=""></a>
+                <a class="links_logo" href="https://www.spotify.com"><img src="img/footer_spotify-logo.png" alt=""></a>
+                <a class="links_logo" href="https://www.instagram.com/"><img src="img/footer_instagram-logo.png" alt=""></a>
+                <a class="links_logo" href="https://www.youtube.com/"><img src="img/footer_youtube-logo.png" alt=""></a>
+                <a class="links_logo" href="https://www.twitter.com/"><img src="img/footer_twitter-logo.png" alt=""></a>
+                <a class="links_logo" href="https://www.facebook.com/"><img src="img/footer_facebook-logo.png" alt=""></a>
             </div>
             <p class="footer_copyright">&#169; 2020 DJ bright lights.</p>
         </footer>
