change img links

--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
                     <li class="nav-item"><a href="#">Contacts</a></li>
                 </div>
           </div>
-            <h1 class="header_title">New Single</h1>
-            <p class="header_text">War For Love</p>
+            <div class="header_anonce">
+                <h1 class="anonce_title">New Single</h1>
+                <p class="anonce_text">War For Love</p>
+            </div>
+            <div class="video_lens"></div>
             <video class='header_video' autoplay muted loop disablePictureInPicture controlsList="nodownload" id="myVideo">
-                <source src="video/Bright Lights - Heartless - SD 480p.mov" type="video/mp4">
+                <source src="video/main-screen_video.mp4" type="video/mp4">
             </video>
         </header>
     </div>
@@ -41,7 +44,7 @@
                     <p class="news_text">Halloween vibes.<br> Listen my new track!</p>
                 </a>
                 <a href='#' class="news_item stream">
-                    <img class='news_image' src="/singer-landing/img/news_3.jpg" alt="">
+                    <img class='news_image' src="img/news_3.jpg" alt="">
                     <p class="news_text">WarForLove is OUT NOW!! <br> 
                         Stream it here!</p>
                 </a>
@@ -57,31 +60,31 @@
                     <div class="about-us_info">
                         <ul class="info_list">
                             <li class="list-item">
-                                <img src="/singer-landing/img/about-us_list-item.png" alt="">
+                                <img src="img/about-us_list-item.png" alt="">
                                 <p>Based in: Los Angeles</p></li>
                             <li class="list-item">
-                                <img src="/singer-landing/img/about-us_list-item.png" alt="">
+                                <img src="img/about-us_list-item.png" alt="">
                                 <p>Founded in 2011</p>
                             </li>
                             <li class="list-item">
-                                <img src="/singer-landing/img/about-us_list-item.png" alt="">
+                                <img src="img/about-us_list-item.png" alt="">
                                 <p>Genre: #DancePop</p>
                             </li>
                             <li class="list-item">
-                                <img src="/singer-landing/img/about-us_list-item.png" alt="">
+                                <img src="img/about-us_list-item.png" alt="">
                                 <p>Label: 333 Recordings</p>
                             </li>
                         </ul>
                     </div>
                 </div>
                 <div class="about-us_images">
-                    <img class='about-us_main-photo' src="/singer-landing/img/about_us-photo.jpg" alt="">
-                    <img class='about-us_background' src="/singer-landing/img/about-us_background.jpg" alt="">
+                    <img class='about-us_main-photo' src="img/about_us-photo.jpg" alt="">
+                    <img class='about-us_background' src="img/about-us_background.jpg" alt="">
                 </div>
             </section>
             <section class="review">
                <div class="review_text"> 
-                    <img class='review_quote-img' src="/singer-landing/img/“.png" alt="">
+                    <img class='review_quote-img' src="img/“.png" alt="">
                     <p class="review_quote">
                     “In an age where mainstream music is designed to be as
                     easily consumed as possible, listening to Bright Lights is
@@ -91,16 +94,16 @@
                     <div class="review_line"></div>
                     <a class='review_link accent' href="PopULove.net">PopULove.net</a>
                 </div>
-                <img class="review_photo" src="/singer-landing/img/about_us-photo-2.jpg" alt="">
+                <img class="review_photo" src="img/about_us-photo-2.jpg" alt="">
             </section>
             <section class="tracks">
-                <img class='tracks_img' src="/singer-landing/img/trackes_round-photo.jpg" alt="dj_in_round">
+                <img class='tracks_img' src="img/trackes_round-photo.jpg" alt="dj_in_round">
                 <div class="tracks_info">
                     <div class="list_title">
-                        <img class='title_waves' src="/singer-landing/img/about_us-waves.png" alt="">
+                        <img class='title_waves' src="img/about_us-waves.png" alt="">
                         <h3 class="title_text">Last tracks</h3>
                     </div>
-                    <audio class='list_player' controls muted src="/singer-landing/audio/3LAU feat. Bright Lights - How You Love Me (Radio Edit) [vzvuke.net].mp3"></audio>
+                    <audio class='list_player' controls muted src="audio/3LAU feat. Bright Lights - How You Love Me (Radio Edit) [vzvuke.net].mp3"></audio>
                     <ul class="list_tracks">
                             <li class="list_item">
                                 <span class="item_number">01</span>
@@ -132,12 +135,12 @@
                             <p class="links_text">Follow me:</p>
                             <div class="links_resources">
                                 <a class="resources_spotify resource" href="https://www.spotify.com">
-                                    <img class='spotify_logo resource-logo' src="/singer-landing/img/tracks_spotify-logo.png" alt="spotify">
+                                    <img class='spotify_logo resource-logo' src="img/tracks_spotify-logo.png" alt="spotify">
                                     <p class="spotify_text resource_text">Spotify
                                     </p>
                                 </a>
                                 <a class="resources_itunes resource" href="https://www.apple.com/itunes/">
-                                    <img class='itunes_logo resource-logo' src="/singer-landing/img/tracks_itunes-logo.png" alt="itunes">
+                                    <img class='itunes_logo resource-logo' src="img/tracks_itunes-logo.png" alt="itunes">
                                     <p class="itunes_text resource_text">iTunes</p>
                                 </a>
                             </div>
@@ -153,6 +156,7 @@
                 <img class="gallery_item img-handsup" src="img/gallert_hands-up.jpg" alt="">
             </section>
             <section class="events">
+                <button class="events_previous switcher">&#8592</button>
                 <div class="event">
                     <img class='event_photo' src="img/events_lazor.jpg" alt="">
                     <div class='event_info'>
@@ -180,7 +184,6 @@
                       </div>
                       <button class="event_ticket">TICKETS</button>
                 </div>
-                <button class="events_previous switcher">&#8592</button>
                 <button class="events_next switcher">&#8594</button>
             </section>
         </main>
@@ -204,7 +207,7 @@
                 <a class="links_logo" href="https://www.twitter.com/"><img src="img/footer_twitter-logo.png" alt=""></a>
                 <a class="links_logo" href="https://www.facebook.com/"><img src="img/footer_facebook-logo.png" alt=""></a>
             </div>
-            <p class="footer_copyright">&#169; 2020 DJ bright lights.</p>
+            <p class="footer_copyright">Copyright &copy; Вильсон Хечикянц 2023</p>
         </footer>
   
 </body>
