changed audio name

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <img class='title_waves' src="img/about_us-waves.png" alt="">
                         <h3 class="title_text">Last tracks</h3>
                     </div>
-                    <audio class='list_player' controls muted src="audio/3LAU feat. Bright Lights - How You Love Me (Radio Edit) [vzvuke.net].mp3"></audio>
+                    <audio class='list_player' controls muted src="audio/audio.mp3"></audio>
                     <ul class="list_tracks">
                             <li class="list_item">
                                 <span class="item_number">01</span>
