--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Bright Lights</title>
-        <link rel="stylesheet" href="./Slick Slider/slick.css"/>
+		<link href=" https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css " rel="stylesheet">
 		<link rel="stylesheet" href="style.css" />
 		<link rel="stylesheet" href="reset.css" />
+
 		<link
 			href="https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"
 			rel="stylesheet"
@@ -39,18 +40,18 @@
 		<main class="main">
 			<section class="news">
 				<a href="#" class="news__item work">
-					<img class="news__image" src="img/news_1.jpg" alt="work" />
+					<img class="news__image" src="img/news_1.webp" alt="work" />
 					<p class="news__text">Working on my upcoming full-lenth album that`s releasing later this year.</p>
 				</a>
 				<a href="#" class="news__item halloween">
-					<img class="news__image" src="img/news_2.jpg" alt="halloween" />
+					<img class="news__image" src="img/news_2.webp" alt="halloween" />
 					<p class="news__text">
 						Halloween vibes.<br />
 						Listen my new track!
 					</p>
 				</a>
 				<a href="#" class="news__item stream">
-					<img class="news__image" src="img/news_3.jpg" alt="" />
+					<img class="news__image" src="img/news_3.webp" alt="" />
 					<p class="news__text">
 						WarForLove is OUT NOW!! <br />
 						Stream it here!
@@ -88,8 +89,8 @@
 					</div>
 				</div>
 				<div class="about__images">
-					<img class="about__main-photo" src="img/about_us-photo.jpg" alt="" />
-					<img class="about__background" src="img/about-us_background.jpg" alt="" />
+					<img class="about__main-photo" src="img/about_us-photo.webp" alt="" />
+					<img class="about__background" src="img/about-us_background.webp" alt="" />
 				</div>
 			</section>
 			<section class="review">
@@ -102,10 +103,10 @@
 					<div class="review__line"></div>
 					<a class="review__link accent" href="PopULove.net">PopULove.net</a>
 				</div>
-				<img class="review__photo" src="img/about_us-photo-2.jpg" alt="" />
+				<img class="review__photo" src="img/about_us-photo-2.webp" alt="" />
 			</section>
 			<section class="tracks">
-				<img class="tracks__img" src="img/trackes_round-photo.jpg" alt="dj_in_round" />
+				<img class="tracks__img" src="img/trackes_round-photo.webp" alt="dj_in_round" />
 				<div class="tracks__info">
 					<div class="list__title">
 						<img class="title__waves" src="img/about_us-waves.png" alt="" />
@@ -154,16 +155,16 @@
 				</div>
 			</section>
 			<section class="gallery">
-				<img class="gallery__item club-photo" src="img/gallery_club.jpg" alt="" />
-				<img class="gallery__item car-photo-1" src="img/gallery_car.jpg" alt="" />
-				<img class="gallery__item car-photo-2" src="img/gallery_car-2.jpg" alt="" />
-				<img class="gallery__item photo-dj" src="img/gallery_dj's.jpg" alt="" />
-				<img class="gallery__item img-handsup" src="img/gallert_hands-up.jpg" alt="" />
+				<img class="gallery__item club-photo" src="img/gallery_club.webp" alt="" />
+				<img class="gallery__item car-photo-1" src="img/gallery_car.webp" alt="" />
+				<img class="gallery__item car-photo-2" src="img/gallery_car-2.webp" alt="" />
+				<img class="gallery__item photo-dj" src="img/gallery_dj's.webp" alt="" />
+				<img class="gallery__item img-handsup" src="img/gallert_hands-up.webp" alt="" />
 			</section>
 			<section class="events">
                 
 				<div class="event">
-					<img class="event__photo" src="img/events_lazor.jpg" alt="" />
+					<img class="event__photo" src="img/events_lazor.webp" alt="" />
 					<div class="event__info">
 						<p class="event__place">Chandler, AZ</p>
 						<p class="event__location">The Park at Wild Horse Pass</p>
@@ -172,7 +173,7 @@
 					<button class="event__ticket">TICKETS</button>
 				</div>
 				<div class="event">
-					<img class="event__photo" src="img/events_club.jpg" alt="" />
+					<img class="event__photo" src="img/events_club.webp" alt="" />
 					<div class="event__info">
 						<p class="event__place">Ibiza, IBZ</p>
 						<p class="event__location">Swag Ibiza Club</p>
@@ -181,7 +182,7 @@
 					<button class="event__ticket">TICKETS</button>
 				</div>
 				<div class="event">
-					<img class="event__photo" src="img/events_club-2.jpg" alt="" />
+					<img class="event__photo" src="img/events_club-2.webp" alt="" />
 					<div class="event__info">
 						<p class="event__place">Ibiza, IBZ</p>
 						<p class="event__location">El Swing Ibiza</p>
@@ -190,7 +191,7 @@
 					<button class="event__ticket">TICKETS</button>
 				</div>
                 <div class="event">
-					<img class="event__photo" src="img/events_lazor.jpg" alt="" />
+					<img class="event__photo" src="img/events_lazor.webp" alt="" />
 					<div class="event__info">
 						<p class="event__place">Chandler, AZ</p>
 						<p class="event__location">The Park at Wild Horse Pass</p>
@@ -199,7 +200,7 @@
 					<button class="event__ticket">TICKETS</button>
 				</div>
 				<div class="event">
-					<img class="event__photo" src="img/events_club.jpg" alt="" />
+					<img class="event__photo" src="img/events_club.webp" alt="" />
 					<div class="event__info">
 						<p class="event__place">Ibiza, IBZ</p>
 						<p class="event__location">Swag Ibiza Club</p>
@@ -208,7 +209,7 @@
 					<button class="event__ticket">TICKETS</button>
 				</div>
 				<div class="event">
-					<img class="event__photo" src="img/events_club-2.jpg" alt="" />
+					<img class="event__photo" src="img/events_club-2.webp" alt="" />
 					<div class="event__info">
 						<p class="event__place">Ibiza, IBZ</p>
 						<p class="event__location">El Swing Ibiza</p>
@@ -244,7 +245,7 @@
 			<p class="footer__copyright">Copyright &copy; Вильсон Хечикянц 2023</p>
 		</footer>
         <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-		<script type="text/javascript" src="./Slick Slider/slick.min.js"></script>
+				<script src=" https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js "></script>
         <script src="./main.js"></script>
 	</body>
 </html>
